feat:add wish by id api
