# src/api/url_patterns_v0_0_0/wish.py
@@ -1,0 +1,6 @@
+from django.urls import path
+from src.api.views.wishlist import GetWishByIdAPIView
+
+wish_urlpatterns = [
+    path("<str:id>/", GetWishByIdAPIView.as_view(), name="wish_by_id"),
+]
