# src/api/views/wishlist/__init__.py
@@ -3,6 +3,7 @@ from src.api.views.wishlist.update_wishlist import UpdateWishlistAPIView
 from src.api.views.wishlist.get_wishlists import GetWishlistsAPIView
 from src.api.views.wishlist.create_wish import CreateWishAPIVIew
 from src.api.views.wishlist.get_wishes import GetWishesAPIView
+from src.api.views.wishlist.get_wish_by_id import GetWishByIdAPIView
 from src.api.views.wishlist.update_wish import UpdateWishAPIView
 from src.api.permissions import IsOwnerOfWishlist
 from rest_framework.permissions import AllowAny
